# tiny-CRT

./: .gitignore  CMakeLists.txt  README.md  abc.txt  g_entry.c  g_malloc.c  g_stdio.c  g_string.c  gcrt.h  main.c
gCRT/: CMakelists.txt  g_ctype.c  g_entry.c  g_malloc.c  g_member.c  g_stdio.c  g_string.c  gcrt.h
